# iRay-Detector-demo

./: CMakeLists.txt
include/: Common.h  Detector.h  DetectorManager.h  EventReceiver.h
sdk/cpp/: IRayAttrDef.h  IRayCmdDef.h  IRayCommon.h  IRayEnumDef.h  IRayEventDef.h
sdk/work_dir/Mars1417V3/: ParamRange.ini  calib.ini  config.ini  gr.ini  iDetectorConfig.ini
src/: CapDriver.cpp  Detector.cpp  DetectorManager.cpp  main.cpp
